fix: scroll position resetting on mobile search

--- a/digitransit-component/packages/digitransit-component-autosuggest/src/helpers/MobileSearch.scss
+++ b/digitransit-component/packages/digitransit-component-autosuggest/src/helpers/MobileSearch.scss
@@ -196,11 +196,13 @@ button.clear-input {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
+  height: 100vw;
   background-color: white;
   position: absolute;
 }
 .mobile-modal-content {
-  width: 100%;
-  height: 100%;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  outline: none;
 }
